--- a/src/main/resources/fxml/application.fxml
+++ b/src/main/resources/fxml/application.fxml
@@ -12,8 +12,8 @@
                   AnchorPane.topAnchor="0" styleClass="padding10" hgap="10" vgap="10">
             <Text text="Добро пожаловать"
                   id="welcome-text"/>
-            <Button
-                    fx:id="sendMail" text="sendMail1"/>
+            <Button onAction="#changeSettings"
+                    text="Настройки"/>
             <Button
                     fx:id="sendMail2" text="sendMail2"/>
         </FlowPane>
